fix: greater z-index for autocomplete-dropdown

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -314,7 +314,7 @@ $max-safe-integer: 2147483647;
 			scrollbar-gutter: stable;
 			scrollbar-width: thin;
 			white-space: nowrap;
-			z-index: 99;
+			z-index: 999;
 			filter: drop-shadow(0 0 3px rgb(0 0 0 / 70%));
 
 			div {
